<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_calendar" />
    <item
        android:id="@+id/photoGallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_photoGallery" />
    <item
        android:id="@+id/locate"
        android:icon="@drawable/ic_locate"
        android:title="@string/menu_locate" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/menu_setting" />
</menu>