<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0071BC"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <Button
        android:id="@+id/masterInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_click"
        android:gravity="start|center_horizontal|center_vertical"
        android:paddingHorizontal="17dp"
        android:stateListAnimator="@null"
        android:text="@string/button_myinfo"
        android:textColor="#000000"
        android:textSize="18sp" />


    <Button
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_click"
        android:gravity="start|center_horizontal|center_vertical"
        android:paddingHorizontal="17dp"
        android:stateListAnimator="@null"
        android:text="@string/button_question"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/communicate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_click"
        android:gravity="start|center_horizontal|center_vertical"
        android:paddingHorizontal="17dp"
        android:stateListAnimator="@null"
        android:text="@string/TextView_communicate"
        android:textColor="#000000"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/btnVersion"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:paddingHorizontal="17dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_click"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sysVer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/TextView_sysVer"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="3dp"
            android:text="@string/TextView_Version"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/signout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_click"
        android:gravity="start|center_horizontal|center_vertical"
        android:paddingHorizontal="17dp"
        android:stateListAnimator="@null"
        android:text="@string/button_signout"
        android:textColor="#0071BC"
        android:textSize="18sp" />




</LinearLayout>