<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".userinfoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline46"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <TextView
            android:id="@+id/myinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TextView_info"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/guideline50"
            app:layout_constraintEnd_toStartOf="@+id/guideline45"
            app:layout_constraintStart_toStartOf="@+id/guideline44"
            app:layout_constraintTop_toTopOf="@+id/guideline46" />

        <TextView
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView_name"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/myname"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintTop_toTopOf="@+id/guideline49" />

        <EditText
            android:id="@+id/myname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#0071BC"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline52"
            app:layout_constraintEnd_toStartOf="@+id/guideline48"
            app:layout_constraintStart_toStartOf="@+id/guideline47" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.37" />

        <TextView
            android:id="@+id/birth1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView_birth"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/mybirth"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintTop_toTopOf="@+id/guideline52" />

        <EditText
            android:id="@+id/mybirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#0071BC"
            android:ems="10"
            android:hint="@string/birth_hint"
            android:inputType="date"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline53"
            app:layout_constraintEnd_toStartOf="@+id/guideline48"
            app:layout_constraintStart_toStartOf="@+id/guideline47" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/TextView_gender"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/genderselect"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintTop_toTopOf="@+id/guideline53" />

        <RadioGroup
            android:id="@+id/genderselect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline55"
            app:layout_constraintEnd_toStartOf="@+id/guideline48"
            app:layout_constraintStart_toStartOf="@+id/guideline47" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/RadioButton_gender1"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="56dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/RadioButton_gender2"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/unwilling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RadioButton_gender3"
                android:textSize="20sp" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline54"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TextView_address"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/myaddress"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintTop_toTopOf="@+id/guideline55" />

        <EditText
            android:id="@+id/myaddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:backgroundTint="#0071BC"
            android:ems="10"
            android:hint="@string/address_hint"
            android:inputType="textPostalAddress"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline51"
            app:layout_constraintEnd_toStartOf="@+id/guideline48"
            app:layout_constraintStart_toStartOf="@+id/guideline47" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.73" />

        <Button
            android:id="@+id/next2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#0071BC"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/button_next"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline56"
            app:layout_constraintEnd_toStartOf="@+id/guideline48"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline47"
            app:layout_constraintTop_toTopOf="@+id/guideline51" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline56"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.83" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>