<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet"
    android:padding="10dp"
    android:background="@drawable/bottomsheet_bgstyle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextView_Title"
        android:textColor="#888888"
        android:textSize="18sp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="17dp"
        android:text="@string/TextView_content"
        android:textColor="#000000"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:text="@string/Button_delete"
            android:background="#00FFFFFF"
            android:textColor="#0071BC"
            android:textSize="20sp"
            android:stateListAnimator="@null" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:stateListAnimator="@null"
            android:text="@string/Button_edit"
            android:textColor="#0071BC"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>